--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:slim
 WORKDIR /
 RUN apt-get -y update; apt-get -y upgrade
-RUN apt-get -y install git binutils
+RUN apt-get -y install git binutils xxd
 COPY requirements.txt .
 RUN pip install -r requirements.txt
